User Authentication with Django-Registration-Redux. And a bit of Bootstrapping

--- a/eSports/contest/templates/contest/tournament_detail.html
+++ b/eSports/contest/templates/contest/tournament_detail.html
@@ -1,4 +1,6 @@
 {% extends 'contest/base.html' %}
+{% block content %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,5 +23,7 @@
             <h1>The specified tournament does not exist</h1>
         {% endif %}
         </div>
+
 </body>
 </html>
+{% endblock %}
