--- a/eSports/contest/templates/contest/base.html
+++ b/eSports/contest/templates/contest/base.html
@@ -24,8 +24,6 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -36,7 +34,7 @@
           <ul class="nav navbar-nav navbar-right">
                 <li><a href="{% url 'home' %}">Home</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="{% url 'auth_logout' %}?next=home/">Logout</a></li>
+                        <li><a href="{% url 'auth_logout' %}?next=/">Logout</a></li>
                         <li><a href="#">Add a New Tournament</a></li>
                     {% else %}
                         <li><a href="{% url 'registration_register' %}">Register Here</a></li>
@@ -51,7 +49,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-                {% block side_block %}{% endblock %}
+                {% block content %}{% endblock %}
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
