--- a/eSports/users/templates/registration/login.html
+++ b/eSports/users/templates/registration/login.html
@@ -1,15 +1,14 @@
-{% block body_content %}
+{% extends "contest/base.html" %}
 
-<link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
+{% block body_block %}
+<h1>Login</h1>
+        <form method="post" action=".">
+                {% csrf_token %}
+                {{ form.as_p }}
 
-<form class="form-signin" role="form" method="post" action=".">
-{% csrf_token %}
+                <input type="submit" value="Log in" />
+                <input type="hidden" name="next" value="{{ next }}" />
+                </form>
 
-<h2 class="form-signin-heading">Please sign in</h2>
-<input class="form-control" placeholder="Username" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
-<input type="password" class="form-control" placeholder="Password" id="id_password" name="password"  required />
-
-        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" >Sign in</button>
-        </form>
-
+        <p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
 {% endblock %}
