--- a/eSports/contest/templates/contest/base.html
+++ b/eSports/contest/templates/contest/base.html
@@ -1,28 +1,74 @@
 <!DOCTYPE html>
-
-<html>
+{% load staticfiles %}
+<html lang="en">
     <head>
-        <title>eSports - {% block title %}Welcome!{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v3.8.5">
+    <link rel="icon" href="#">
+    <title>
+        eSports - {% block title_block %}Welcome to the eSports community!{% endblock %}
+    </title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://getbootstrap.com/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.css" rel="stylesheet">
     </head>
 
     <body>
-        <div>
-            {% block body_block %}{% endblock %}
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark p-0">
+                <a class="navbar-brand p-2" href="{% url 'home' %}">eSports</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}?next=/">Logout</a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'registration_register' %}">Register Here</a></li>
+                        <li class="nav-item "><a class="nav-link" href="{% url 'auth_login' %}">Login</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <div class="container-fluid">
+            <div class="row">
+                <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+                    <div class="ml-3 w-75">
+                        <input type="search" id="search-input" class="form-control ds-input" placeholder="Search..." />
+                    </div>
+
+                </nav>
+
+                <main role="main" class="col-md-9  ml-sm-auto col-lg-10 px-4">
+                    {% block body_block %}{% endblock %}
+
+                    <!-- FOOTER -->
+                    <footer>
+                        <p class="float-right"><a href="#">Back to top</a></p>
+                        <p>&copy; 2019 Tango With Django 2 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+                    </footer>
+                </main>
+            </div>
         </div>
 
-        <hr />
-
-        <div>
-            <ul>
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                <li><a href="#">Add a New Tournament</a></li>
-            {% else %}
-                <li><a href="{% url 'register' %}">Register Here</a></li>
-                <li><a href="{% url 'login' %}">Login</a></li>
-            {% endif %}
-
-            </ul>
-        </div>
+        <!-- Bootstrap core JavaScript -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="{% static "js/jquery-3.3.1.min.js" %}" crossorigin="anonymous"></script>
+        <script src="{% static "js/rango-jquery.js" %}" crossorigin="anonymous"></script>
+        <script src="{% static "js/rango-ajax.js" %}" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
+        <script src="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.js"></script>
     </body>
 </html>
