--- a/eSports/contest/templates/contest/home.html
+++ b/eSports/contest/templates/contest/home.html
@@ -1,5 +1,6 @@
+{% extends "contest/base.html" %}
 
-<!DOCTYPE html>
+{% block body_block %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,3 +25,5 @@
 {% endif %}
 </body>
 </html>
+
+{% endblock %}
