--- a/eSports/users/templates/registration/login.html
+++ b/eSports/users/templates/registration/login.html
@@ -1,14 +1,22 @@
 {% extends "contest/base.html" %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Login
+{% endblock %}
 
 {% block body_block %}
-<h1>Login</h1>
-        <form method="post" action=".">
-                {% csrf_token %}
-                {{ form.as_p }}
-
-                <input type="submit" value="Log in" />
-                <input type="hidden" name="next" value="{{ next }}" />
-                </form>
-
-        <p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
+    <div class="jumbotron p-4">
+        <div class="container">
+            <h1 class="jumotron-heading">Login to eSports</h1>
+        </div>
+    </div>
+    <form id="login_form" method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        Username: <input type="text" name="username" value="" size="50" />
+        <br />
+        Password: <input type="password" name="password" value="" size="50" />
+        <br />
+        <input type="submit" value="submit" />
+    </form>
 {% endblock %}
