--- a/eSports/users/templates/registration/registration_form.html
+++ b/eSports/users/templates/registration/registration_form.html
@@ -1,12 +1,13 @@
 {% extends "contest/base.html" %}
 
-
+{% block title_block %}
+Register
+{% endblock %}
 {% block body_block %}
 <h1>Register Here</h1>
-        <form method="post" action=".">
-                {% csrf_token %}
-                {{ form.as_p }}
-
-                <input type="submit" value="Submit" />
-        </form>
+<form method="post" action=".">
+{% csrf_token %}
+{{ form.as_p }}
+<input type="submit" value="Register" />
+</form>
 {% endblock %}
