--- a/eSports/contest/templates/contest/tournament_detail.html
+++ b/eSports/contest/templates/contest/tournament_detail.html
@@ -1,3 +1,7 @@
+
+{% extends "contest/base.html" %}
+
+{% block body_block %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,3 +26,4 @@
         </div>
 </body>
 </html>
+{% endblock %}
