The Registration Template Create and View User Profiles Creating a Profile Instance

--- a/eSports/contest/templates/contest/base.html
+++ b/eSports/contest/templates/contest/base.html
@@ -30,11 +30,13 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                                                <li class="nav-item "><a class="nav-link" href="{% url 'add_tournament' %}">Host a Tournament</a></li>
 
                         {% if user.is_authenticated %}
-
+                         <li class="nav-item "><a class="nav-link" href="{% url 'add_tournament' %}">Host a Tournament</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}?next={% url 'auth_logout'%}">Logout</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'profile' user.username %}">Profile</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'list_profiles' %}">List Profiles</a></li>
+
                         {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'registration_register' %}">Register Here</a></li>
                         <li class="nav-item "><a class="nav-link" href="{% url 'auth_login' %}">Login</a></li>
