--- a/eSports/contest/templates/contest/profile_registration.html
+++ b/eSports/contest/templates/contest/profile_registration.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'contest/base.html' %}
+{% load staticfiles %}
 
-</body>
-</html>
+{% block title_block %}
+    Register - Step 2
+{% endblock %}
+
+{% block body_block %}
+    <div class="jumbotron p-4">
+        <div class="container">
+            <h1 class="jumotron-heading">Register for eSports - Step 2</h1>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <form method="post" action="." enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Create Profile" />
+            </form>
+        </div>
+    </div>
+{% endblock %}
